v2.5.1 Some fixes, and remove eval hack from base_exporter

v2.5.0 Some refactoring, and a new install procedure
* Some re-factoring of both code and examples, including
* replacing the overuse of __FILE__ with 'relative_require'
* 'install_jruby_complete', replaced by 'rp5 setup install'
* The vecmath library is now a compiled jruby extension
* which includes an extremely simple ArcBall interface.
* Introducing the fastmath library with DegLut tables for cos/sin.
* Update to JRuby-1.7.13

v2.4.4 Update to JRuby-1.7.12
* Enhancement to Vec2D & Vec3D (preferred to PVector as
* providing a more ruby-like interface), now provide a
* conditional set_mag method, via optional &block.

v2.4.3 Update to JRuby-1.7.11
* Added an autorun demo Rakefile to some sample directories
* Support utf-8 in sketches
* Refactor and extend vecmath (updated drawolver to use Vec3D)

v2.4.2 Update to JRuby-1.7.10
* Revised suggestions for PROCESSING_ROOT on MacOSX

v2.4.1 First release to return to rubygems since processing 1.0.11
* Features a post-install download of jruby-complete (version 1.7.9)
* Features use of jars from an installed version of vanilla processing,
* on linux and windows use version 2.1.0 (later versions may also work).
* For Mac, especially if you are using Mac "java" stick with version 2.0.3
* Update gemspec to match modern expectations

v2.4.0 Returning to rubygems distribution, by not including any jars
* Use jars from an installed version of vanilla processing-2.0.3 (or version 2.1.0 linux and windows)
* Require an installed jruby (with an optional jruby-complete-1.7.8 post
* install)

v2.3.1 Revert to processing-2.0.3 for MacOSX
* Mac users may use Apple jvm java 6
* Windows and Linux users need at least java 7 jre (java 8 does now work)

v2.2.2 Update to JRuby-1.7.6
* Merge vec.rb, quaternion.rb and arcball.rb into vecmath.rb, stricter path
# requires ruby filename to match that of library

v2.2.1 Replacing 'arcball' library with 'vecmath' library