@@ -2,6 +2,7 @@
 
 # 3D castle tower constructed out of individual bricks.
 # Uses the Vect struct and Cube class.
+
 attr_reader :angle, :brick, :bricks_per_layer, :brick_layers
 attr_reader :radius, :layer_num, :temp_y
 
@@ -21,25 +22,25 @@ def draw
   fill 182, 62, 29
   no_stroke
   lights
-  translate(width/2.0, height * 1.2, -380)               # move viewpoint into position
-  rotate_x(radians(-45))                                 # tip tower to see inside
+  translate(width / 2.0, height * 1.2, -380)             # move viewpoint into position
+  rotate_x(-45.radians)                                  # tip tower to see inside
   rotate_y(frame_count * PI/600)                         # slowly rotate tower
-  brick_layers.times {|i| draw_layer(i) }
+  brick_layers.times { |i| draw_layer(i) }
 end
 
 def draw_layer(layer_num)
   @layer_num = layer_num
   @temp_y -= @brick_height                               # increment rows
   @angle = 360.0 / bricks_per_layer * layer_num / 2.0    # alternate brick seams
-  bricks_per_layer.times {|i| draw_bricks(i) }
+  bricks_per_layer.times { |i| draw_bricks(i) }
 end
 
 def draw_bricks(brick_num)
-  temp_z = cos(radians(angle)) * radius
-  temp_x = sin(radians(angle)) * radius
+  temp_z = cos(angle.radians) * radius
+  temp_x = sin(angle.radians) * radius
   push_matrix
   translate temp_x, temp_y, temp_z
-  rotate_y(radians(angle))
+  rotate_y(angle.radians)
   top_layer = layer_num == brick_layers - 1
   even_brick = brick_num % 2 == 0
   brick.create unless top_layer                          # main tower
@@ -73,8 +74,8 @@ class Cubeish
 
     SIDES.each do |side, signs|
       vertices[side] = signs.map do |s|
-        s = s.split('').map {|el| SIGNS[el] }
-        Vect.new(s[0] * w/2, s[1] * h/2, s[2] * d/2)
+        s = s.split('').map { |el| SIGNS[el] }
+        Vect.new(s[0] * w / 2, s[1] * h / 2, s[2] * d/2)
       end
     end
   end
@@ -82,7 +83,7 @@ class Cubeish
   def create
     vertices.each do |name, vectors|
       begin_shape QUADS
-      vectors.each {|v| vertex(v.x, v.y, v.z) }
+      vectors.each { |v| vertex(v.x, v.y, v.z) }
       end_shape
     end
   end
