@@ -10,7 +10,7 @@
 def setup
   size 640, 360
   background 100
-  smooth
+  smooth(4)
   no_stroke
   
   diameter = min(width, height) * 0.75
@@ -20,8 +20,8 @@ def setup
   angles.each do |angle|
     fill angle * 3.0
     arc width/2, height/2, 	 						    # center x, y
-    diameter, diameter,  						      # width, height
-    last_angle, last_angle + radians(angle)	# angles from, to
-    last_angle += radians(angle)
+    diameter, diameter,  						        # width, height
+    last_angle, last_angle + angle.radians	# angles from, to
+    last_angle += angle.radians
   end
 end
